# egg-node

./: .gitignore  Cargo.toml  LICENSE  README.md  egg-node
cli/: mod.rs
config/: mod.rs
egg-chain/: db  snap.00000000000001C6  snap.000000000000047E
fork-test-db/: db
node/: runtime.rs
rpc/: server.rs
src/: cli.rs  config.rs  lib.rs  main.rs  mempool.rs  node.rs  storage.rs
src/chain/: block.rs  builder.rs  hash.rs  header.rs  header_chain.rs  mod.rs  reward.rs  sign.rs  state.rs  tx.rs  txid.rs  undo.rs  utxo.rs  validation.rs
src/config/: default.rs
src/fee/: estimator.rs
src/net/: ban.rs  mod.rs  rate.rs
src/orphan/: block.rs  mod.rs  tx.rs
src/p2p/: message.rs  mod.rs  network.rs  peer.rs  service.rs
src/pow/: miner.rs  mod.rs  target.rs  verify.rs  work.rs
src/storage/: sled_store.rs  sleddb.rs
src/wallet/: address.rs  crypto.rs  delegation.rs  derive.rs  mod.rs  persist.rs  role.rs  seed.rs  store.rs
src/wallet/multisig/: policy.rs  session.rs
