[package]
name = "egg-node"
version = "0.1.0"
edition = "2021"
default-run = "egg-node"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
secp256k1 = "0.28"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
sled = "0.34"
hex = "0.4"
